--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.parse:parse-android:1.16.7'
+
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
+
+    implementation 'com.parse:parse-android:1.16.7'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.gms:play-services-places:15.0.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
 }
 
 
