--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.gms:play-services-places:15.0.0'
     implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
 
 
